--- a/package.json
+++ b/package.json
@@ -13,22 +13,24 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.1100.2",
     "@angular/animations": "^11.0.9",
+    "@angular/cli": "~11.0.2",
     "@angular/common": "~11.0.1",
     "@angular/compiler": "~11.0.1",
+    "@angular/compiler-cli": "~11.0.1",
     "@angular/core": "~11.0.1",
     "@angular/forms": "~11.0.1",
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
-    "@angular/compiler-cli": "~11.0.1",
-    "@angular-devkit/build-angular": "~0.1100.2",
-    "@angular/cli": "~11.0.2",
+    "express": "^4.18.1",
     "ngx-toastr": "^13.2.1",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.2",
@@ -51,6 +53,6 @@
   },
   "engines": {
     "node": "14.15.1",
-      "npm": "6.14.8"
+    "npm": "6.14.8"
   }
 }
